[ALPS06192424] arm64: dts: mt6879: fix wdma1 underrun
add wdma1 frame done event

MTK-Commit-Id: ad490cb44a1dca0733acd188a76c39f4febe34d7

Signed-off-by: Shaohua Deng <shaohua.deng@mediatek.com>
CR-Id: ALPS06192424
Feature: [Module]Display Driver
Change-Id: Ic7b0b87bd8434d7c181314580d27b1cc2309c36e

--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -7164,6 +7164,7 @@
 			"disp_token_stream_block0",
 			"disp_token_cabc_eof0",
 			"disp_wdma0_eof2",
+			"disp_wdma1_eof2",
 			"disp_dsi0_sof0",
 			"disp_token_disp_va_start0",
 			"disp_token_disp_va_end0",
@@ -7182,6 +7183,7 @@
 			<&gce CMDQ_SYNC_TOKEN_STREAM_BLOCK>,
 			<&gce CMDQ_SYNC_TOKEN_CABC_EOF>,
 			<&gce CMDQ_EVENT_MMSYS_DISP_WDMA0_FRAME_DONE>,
+			<&gce CMDQ_EVENT_MMSYS_DISP_WDMA1_FRAME_DONE>,
 			<&gce CMDQ_EVENT_MMSYS_DISP_DSI0_SOF>,
 			<&gce CMDQ_SYNC_TOKEN_DISP_VA_START>,
 			<&gce CMDQ_SYNC_TOKEN_DISP_VA_END>,
