[ALPS06290712] arm64: dts: mt6879: Disable VIO075 always on setting
Disable VIO075 alway on setting on mt6879

MTK-Commit-Id: ff475ee4f81bd83dce62d2f12dd465c5995f69b9

Signed-off-by: Wen Su <wen.su@mediatek.com>
CR-Id: ALPS06290712
Feature: Regulator(regulator)
Change-Id: I21c3424b947b0600d3f6fa00aa7fab12a51b63a3

--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -10472,6 +10472,10 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 	regulator-always-on;
 };
 
+&mt6363_vio075 {
+	/delete-property/ regulator-always-on;
+};
+
 &mt6368_vbuck2 {
 	regulator-always-on;
 };
