[ALPS06274200] arm64: dts: mt6983: preTE control
add control preTE option to DTS

MTK-Commit-Id: f28e32926295f9875865a670b113041f7be25969

Signed-off-by: ShangQuan Long <shangquan.long@mediatek.com>
CR-Id: ALPS06274200
Feature: Display Driver (DSI Interface)
Change-Id: Ifdef1b21b404c0d0dc0faf3b3f8b5d3dd37651d9

--- a/arch/arm64/boot/dts/mediatek/mt6983.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6983.dts
@@ -6306,7 +6306,8 @@
 			"MTK_DRM_OPT_MSYNC2_0",
 			"MTK_DRM_OPT_MML_PRIMARY",
 			"MTK_DRM_OPT_DUAL_TE",
-			"MTK_DRM_OPT_RES_SWITCH";
+			"MTK_DRM_OPT_RES_SWITCH",
+			"MTK_DRM_OPT_PRE_TE";
 
 		helper-value = <0>, /*MTK_DRM_OPT_STAGE*/
 			<1>, /*MTK_DRM_OPT_USE_CMDQ*/
@@ -6355,7 +6356,8 @@
 			<1>, /*MTK_DRM_OPT_MSYNC2_0*/
 			<1>, /*MTK_DRM_OPT_MML_PRIMARY*/
 			<1>, /*MTK_DRM_OPT_DUAL_TE*/
-			<1>; /*MTK_DRM_OPT_RES_SWITCH*/
+			<1>, /*MTK_DRM_OPT_RES_SWITCH*/
+			<0>; /*MTK_DRM_OPT_PRE_TE*/
 	};
 	disp_mutex0: disp_mutex@14001000 {
 		compatible = "mediatek,disp_mutex0",
