--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -5478,6 +5478,7 @@
 			reg = <0 0x1e801000 0 0x1000>;
 			mediatek,smi = <&smi_infra_disp_subcommon0 &smi_infra_disp_subcommon1>;
 			mediatek,common-id = <0>;
+			operating-points-v2 = <&opp_table_mminfra>;
 			power-domains = <&scpsys MT6879_POWER_DOMAIN_MM_INFRA>;
 			clocks = <&mminfra_config_clk CLK_MMINFRA_GCE_D>,
 					<&mminfra_config_clk CLK_MMINFRA_GCE_M>,
