--- a/arch/arm64/boot/dts/mediatek/mt6895.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6895.dts
@@ -3776,6 +3776,7 @@
 			reg = <0 0x1e801000 0 0x1000>;
 			mediatek,smi = <&smi_infra_disp_subcommon0 &smi_infra_disp_subcommon1>;
 			mediatek,common-id = <0>;
+			operating-points-v2 = <&opp_table_mminfra>;
 			power-domains = <&scpsys MT6895_POWER_DOMAIN_MM_INFRA>;
 			clocks = <&mminfra_config_clk CLK_MMINFRA_GCE_D>,
 					<&mminfra_config_clk CLK_MMINFRA_GCE_M>,
@@ -3790,6 +3791,7 @@
 				reg = <0 0x1e80b000 0 0x1000>;
 				mediatek,smi = <&smi_sysram_subcommon3 &smi_sysram_subcommon4>;
 				mediatek,common-id = <2>;
+				operating-points-v2 = <&opp_table_mminfra>;
 				power-domains = <&scpsys MT6895_POWER_DOMAIN_MM_INFRA>;
 				clocks = <&mminfra_config_clk CLK_MMINFRA_GCE_D>,
 						<&mminfra_config_clk CLK_MMINFRA_GCE_M>,
@@ -3818,6 +3820,7 @@
 				reg = <0 0x1e80f000 0 0x1000>;
 				mediatek,smi = <&smi_mdp_subcommon4 &smi_mdp_subcommon5>;
 				mediatek,common-id = <1>;
+				operating-points-v2 = <&opp_table_mminfra>;
 				power-domains = <&scpsys MT6895_POWER_DOMAIN_MM_INFRA>;
 				clocks = <&mminfra_config_clk CLK_MMINFRA_GCE_D>,
 						<&mminfra_config_clk CLK_MMINFRA_GCE_M>,
