[ALPS06284118] arm64: dts: mt6895: update dtsi
add 766 dual, sm5 to 6895 dtsi

MTK-Commit-Id: 85fbe70a4b141df0c48d74d394ae847b13c2e35a

CR-Id: ALPS06284118
Feature: [Android Default] Camera Application Basic Functions
Change-Id: I5fda3960f02614caa018a00564a46b11e81e2d3c
Signed-off-by: mtk23161 <yuche.huang@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/cust_mt6895_camera_v4l2.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6895_camera_v4l2.dtsi
@@ -465,7 +465,8 @@
 
 	sensor4: sensor4@10 {
 		compatible = "mediatek,imgsensor";
-		sensor-names = "imx481_mipi_raw";
+		sensor-names = "imx481_mipi_raw",
+				"s5k3m5sx_mipi_raw";
 		reg = <0x10>;
 		#thermal-sensor-cells = <0>;
 		pinctrl-names = "mclk_off",
@@ -643,7 +644,8 @@
 
 	sensor2: sensor2@1a {
 		compatible = "mediatek,imgsensor";
-		sensor-names = "s5k3m5sx_mipi_raw";
+		sensor-names = "s5k3m5sx_mipi_raw",
+				"imx766dual_mipi_raw";
 		reg = <0x1a>;
 
 		#thermal-sensor-cells = <0>;
