[ALPS06296001] add m4u port of postmask in dts
add m4u port of postmask in dts

MTK-Commit-Id: b8b241b2f91ab5ae38989bb241e4b8f8fc2b3db9

Signed-off-by: Guangyang Duan <guangyang.duan@mediatek.com>
CR-Id: ALPS06296001
Feature: Display Driver (DSI Interface)
Change-Id: I07af63f49b3a88f799f68c120dbae2e6e0eff4d8

--- a/arch/arm64/boot/dts/mediatek/mt6895.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6895.dts
@@ -5797,6 +5797,8 @@
 			reg = <0 0x1400f000 0 0x1000>;
 			interrupts = <GIC_SPI 315 IRQ_TYPE_LEVEL_HIGH 0>;
 			clocks = <&mmsys0_config_clk CLK_MM0_DISP_POSTMASK0>;
+			mediatek,smi-id = <0>;
+			iommus = <&disp_iommu M4U_LARB0_PORT0>;/*M4U_PORT_L0_DISP_POSTMASK0*/
 		};
 
 		disp_dither0: disp_dither@14010000 {
@@ -6108,6 +6110,8 @@
 			reg = <0 0x1440f000 0 0x1000>;
 			interrupts = <GIC_SPI 359 IRQ_TYPE_LEVEL_HIGH 0>;
 			clocks = <&mmsys1_config_clk CLK_MM1_DISP_POSTMASK0>;
+			mediatek,smi-id = <20>;
+			iommus = <&disp_iommu M4U_LARB20_PORT0>;/*M4U_PORT_L20_DISP_POSTMASK0*/
 		};
 
 		disp_dither1: disp_dither@14410000 {
