[ALPS06300070] arm64: dts: mt6879 : fix driver node can not be probed
put the compatible in the wrong place, so kenel node not probe

MTK-Commit-Id: 7ca3336ad77a5be8612902a8e588e33a33afef89

Signed-off-by: Jiarui Lin <Jiarui.Lin@mediatek.com>
CR-Id: ALPS06300070
Feature: Google Widevine Level1
Change-Id: I24714201c9925321fcbb4ad28f545d0d902e89bf

--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -9988,6 +9988,11 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 	mtee_svp: mtee_svp {
 		compatible = "medaitek,svp";
 	};
+
+	drm_wv: drm_wv {
+		compatible = "mediatek,drm_wv";
+		status = "okay";
+	};
 };
 
 &i2c5 {
