[ALPS06298110] arm64: dts: mt6879: Support camsys topck clk
Add cam_sel and related clk sources.

MTK-Commit-Id: 3a16012d12332957a3a732dc42cfb02f0aa2fa15

CR-Id: ALPS06298110
Feature: [Android Default] Camera Application Basic Functions
Signed-off-by: mtk13668 <yuan-jung.kuo@mediatek.com>
Change-Id: I2e3a75332eb6e4a12a12744719bb0a13e78f8a75

--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -8703,6 +8703,20 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 		power-domains = <&scpsys MT6879_POWER_DOMAIN_CAM_MAIN>;
 		operating-points-v2 = <&opp_table_cam>;
 		dvfs-vmm-supply = <&vmm_proxy_label>;
+
+		mux_name = "cam";
+		clk_src = "TOP_MAINPLL_D4_D2",
+				"TOP_UNIVPLL_D6", "TOP_MMPLL_D6", "TOP_MAINPLL_D4";
+		clocks = <&topckgen_clk CLK_TOP_CAM_SEL>,	        /* 0 */
+			 <&topckgen_clk CLK_TOP_MAINPLL_D4_D2>,	        /* 1 */
+			 <&topckgen_clk CLK_TOP_UNIVPLL_D6>,	        /* 2 */
+			 <&topckgen_clk CLK_TOP_MMPLL_D6>,	        /* 3 */
+			 <&topckgen_clk CLK_TOP_MAINPLL_D4>;	        /* 4 */
+		clock-names = "cam",	                                /* 0 */
+				"TOP_MAINPLL_D4_D2",	                /* 1 */
+				"TOP_UNIVPLL_D6",	                /* 2 */
+				"TOP_MMPLL_D6",	                        /* 3 */
+				"TOP_MAINPLL_D4";	                /* 4 */
 	};
 
 	cam_raw_a@1a030000 {
