--- a/arch/arm64/boot/dts/mediatek/mt6895.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6895.dts
@@ -9586,6 +9586,22 @@
 		power-domains = <&scpsys MT6895_POWER_DOMAIN_CAM_MAIN>;
 		operating-points-v2 = <&opp_table_cam>;
 		dvfs-vmm-supply = <&vmm_proxy_label>;
+		mux_name = "cam";
+		clk_src = "TOP_MAINPLL_D4_D2",
+				"TOP_UNIVPLL_D4_D2", "TOP_UNIVPLL_D6",
+				"TOP_MAINPLL_D4", "TOP_UNIVPLL_D4";
+		clocks = <&topckgen_clk CLK_TOP_CAM_SEL>,	        /* 0 */
+			 <&topckgen_clk CLK_TOP_MAINPLL_D4_D2>,	        /* 1 */
+			 <&topckgen_clk CLK_TOP_UNIVPLL_D4_D2>,	        /* 2 */
+			 <&topckgen_clk CLK_TOP_UNIVPLL_D6>,	        /* 3 */
+			 <&topckgen_clk CLK_TOP_MAINPLL_D4>,	        /* 4 */
+			 <&topckgen_clk CLK_TOP_UNIVPLL_D4>;	        /* 5 */
+		clock-names = "cam",	                                /* 0 */
+				"TOP_MAINPLL_D4_D2",	                /* 1 */
+				"TOP_UNIVPLL_D4_D2",	                /* 2 */
+				"TOP_UNIVPLL_D6",	                /* 3 */
+				"TOP_MAINPLL_D4",	                /* 4 */
+				"TOP_UNIVPLL_D4";	                /* 5 */
 	};
 
 	remoteproc_ccd: remoteproc_ccd@1a030000 {
