[ALPS06239455] pda: tf callback function
[Detail]
1. porting tf callback function
2. reduce pda kernel log
3. use device link to enable smi clock
4. delete unnecessary clock

MTK-Commit-Id: 0e497c4b808cf1d9ef807621db97b3d5327636a3

Change-Id: Iac4a18410ee95563e14c1d91618c84ac3b290ea1
CR-Id: ALPS06239455
Feature: [Android Default] AF (contrast AF)
Signed-off-by: po-hao.huang <po-hao.huang@mediatek.com>

--- a/drivers/misc/mediatek/cameraisp/pda/Makefile
+++ b/drivers/misc/mediatek/cameraisp/pda/Makefile
@@ -14,7 +14,8 @@
 $(info $(srctree))
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/smi/
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/mtk-interconnect/
-ccflags-$(CONFIG_MTK_IOMMU_V2) += -I$(srctree)/drivers/iommu
+ccflags-y += -I$(srctree)/drivers/iommu
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/iommu
 ccflags-$(CONFIG_MTK_IOMMU_V2) += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/$(MTK_PLATFORM)/include/
 
 obj-y := camera_pda_dummy.o
