--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -9038,6 +9038,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a118000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <0>;
+		mediatek,larbs = <&smi_larb13>;
 		mediatek,camsv-hwcap = <0x110051>;
 		mediatek,cammux-id = <2>;
 		interrupts = <GIC_SPI 440 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9080,6 +9081,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a119000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <1>;
+		mediatek,larbs = <&smi_larb13>;
 		mediatek,camsv-hwcap = <0x210051>;
 		mediatek,cammux-id = <3>;
 		interrupts = <GIC_SPI 441 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9122,6 +9124,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a11a000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <2>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0x120051>;
 		mediatek,cammux-id = <14>;
 		interrupts = <GIC_SPI 442 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9164,6 +9167,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a11b000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <3>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0x220051>;
 		mediatek,cammux-id = <15>;
 		interrupts = <GIC_SPI 443 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9206,6 +9210,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a11c000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <4>;
+		mediatek,larbs = <&smi_larb13>;
 		mediatek,camsv-hwcap = <0>;
 		mediatek,cammux-id = <0>;
 		interrupts = <GIC_SPI 444 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9248,6 +9253,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a11d000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <5>;
+		mediatek,larbs = <&smi_larb13>;
 		mediatek,camsv-hwcap = <0>;
 		mediatek,cammux-id = <0>;
 		interrupts = <GIC_SPI 445 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9290,6 +9296,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a11e000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <6>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0>;
 		mediatek,cammux-id = <0>;
 		interrupts = <GIC_SPI 446 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9332,6 +9339,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a11f000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <7>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0>;
 		mediatek,cammux-id = <0>;
 		interrupts = <GIC_SPI 447 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9374,6 +9382,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a188000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <8>;
+		mediatek,larbs = <&smi_larb13>;
 		mediatek,camsv-hwcap = <0>;
 		mediatek,cammux-id = <0>;
 		interrupts = <GIC_SPI 448 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9416,6 +9425,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a189000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <9>;
+		mediatek,larbs = <&smi_larb13>;
 		mediatek,camsv-hwcap = <0>;
 		mediatek,cammux-id = <0>;
 		interrupts = <GIC_SPI 449 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9458,6 +9468,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a18a000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <10>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0x1>;
 		mediatek,cammux-id = <4>;
 		interrupts = <GIC_SPI 450 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9498,6 +9509,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a18b000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <11>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0x1>;
 		mediatek,cammux-id = <5>;
 		interrupts = <GIC_SPI 451 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9538,6 +9550,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a18c000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <12>;
+		mediatek,larbs = <&smi_larb13>;
 		mediatek,camsv-hwcap = <0x1>;
 		mediatek,cammux-id = <6>;
 		interrupts = <GIC_SPI 452 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9578,6 +9591,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a18d000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <13>;
+		mediatek,larbs = <&smi_larb13>;
 		mediatek,camsv-hwcap = <0x1>;
 		mediatek,cammux-id = <7>;
 		interrupts = <GIC_SPI 453 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9618,6 +9632,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a18e000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <14>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0x1>;
 		mediatek,cammux-id = <8>;
 		interrupts = <GIC_SPI 454 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9658,6 +9673,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a18f000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <15>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0x1>;
 		mediatek,cammux-id = <9>;
 		interrupts = <GIC_SPI 455 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -9698,6 +9714,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 				<0 0x1a138000 0 0x8000>;
 		reg-names = "base", "inner_base";
 		mediatek,mraw-id = <0>;
+		mediatek,larbs = <&smi_larb25>;
 		mediatek,cammux-id = <10>;
 		interrupts = <GIC_SPI 461 IRQ_TYPE_LEVEL_HIGH 0>;
 		power-domains = <&scpsys MT6879_POWER_DOMAIN_CAM_MRAW>;
@@ -9733,6 +9750,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 				<0 0x1a148000 0 0x8000>;
 		reg-names = "base", "inner_base";
 		mediatek,mraw-id = <1>;
+		mediatek,larbs = <&smi_larb26>;
 		mediatek,cammux-id = <11>;
 		interrupts = <GIC_SPI 462 IRQ_TYPE_LEVEL_HIGH 0>;
 		power-domains = <&scpsys MT6879_POWER_DOMAIN_CAM_MRAW>;
@@ -9768,6 +9786,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 				<0 0x1a158000 0 0x8000>;
 		reg-names = "base", "inner_base";
 		mediatek,mraw-id = <2>;
+		mediatek,larbs = <&smi_larb25>;
 		mediatek,cammux-id = <12>;
 		interrupts = <GIC_SPI 463 IRQ_TYPE_LEVEL_HIGH 0>;
 		power-domains = <&scpsys MT6879_POWER_DOMAIN_CAM_MRAW>;
@@ -9803,6 +9822,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 				<0 0x1a168000 0 0x8000>;
 		reg-names = "base", "inner_base";
 		mediatek,mraw-id = <3>;
+		mediatek,larbs = <&smi_larb26>;
 		mediatek,cammux-id = <13>;
 		interrupts = <GIC_SPI 456 IRQ_TYPE_LEVEL_HIGH 0>;
 		power-domains = <&scpsys MT6879_POWER_DOMAIN_CAM_MRAW>;
