[ALPS06278293] arm64: dts: mt6895: camsv/pdp
[Detail] add smi control

MTK-Commit-Id: 459809b0a0d76469f1917df43a4bd1677f34993c

Signed-off-by: mtk14303 <Hsiencheng.Chang@mediatek.com>
CR-Id: ALPS06278293
Feature: [Android Default] Camera Application Basic Functions
Change-Id: I689e49eaf7f3c4f7aede938a3261d9fafe0cd501

--- a/arch/arm64/boot/dts/mediatek/mt6895.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6895.dts
@@ -12085,6 +12085,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a118000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <0>;
+		mediatek,larbs = <&smi_larb13>;
 		mediatek,camsv-hwcap = <0x110051>;
 		mediatek,cammux-id = <3>;
 		interrupts = <GIC_SPI 445 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -12122,6 +12123,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a119000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <1>;
+		mediatek,larbs = <&smi_larb13>;
 		mediatek,camsv-hwcap = <0x210051>;
 		mediatek,cammux-id = <4>;
 		interrupts = <GIC_SPI 446 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -12159,6 +12161,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a11a000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <2>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0x120051>;
 		mediatek,cammux-id = <5>;
 		interrupts = <GIC_SPI 447 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -12196,6 +12199,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a11b000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <3>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0x220051>;
 		mediatek,cammux-id = <6>;
 		interrupts = <GIC_SPI 448 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -12233,7 +12237,8 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a11c000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <4>;
-		mediatek,camsv-hwcap = <0x1400e1>;
+		mediatek,larbs = <&smi_larb13>;
+		mediatek,camsv-hwcap = <0x1400f1>;
 		mediatek,cammux-id = <7>;
 		interrupts = <GIC_SPI 449 IRQ_TYPE_LEVEL_HIGH 0>;
 		power-domains = <&scpsys MT6895_POWER_DOMAIN_CAM_MAIN>;
@@ -12270,7 +12275,8 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a11d000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <5>;
-		mediatek,camsv-hwcap = <0x2400e1>;
+		mediatek,larbs = <&smi_larb13>;
+		mediatek,camsv-hwcap = <0x2400f1>;
 		mediatek,cammux-id = <8>;
 		interrupts = <GIC_SPI 450 IRQ_TYPE_LEVEL_HIGH 0>;
 		power-domains = <&scpsys MT6895_POWER_DOMAIN_CAM_MAIN>;
@@ -12307,6 +12313,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a11e000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <6>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0x1800a1>;
 		mediatek,cammux-id = <19>;
 		interrupts = <GIC_SPI 451 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -12344,6 +12351,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a11f000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <7>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0x2800a1>;
 		mediatek,cammux-id = <20>;
 		interrupts = <GIC_SPI 452 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -12381,6 +12389,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a188000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <8>;
+		mediatek,larbs = <&smi_larb13>;
 		mediatek,camsv-hwcap = <0x4400e1>;
 		mediatek,cammux-id = <21>;
 		interrupts = <GIC_SPI 453 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -12418,6 +12427,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a189000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <9>;
+		mediatek,larbs = <&smi_larb13>;
 		mediatek,camsv-hwcap = <0x4800a1>;
 		mediatek,cammux-id = <22>;
 		interrupts = <GIC_SPI 454 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -12455,6 +12465,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a18a000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <10>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0x1>;
 		mediatek,cammux-id = <9>;
 		interrupts = <GIC_SPI 455 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -12490,6 +12501,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a18b000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <11>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0x1>;
 		mediatek,cammux-id = <10>;
 		interrupts = <GIC_SPI 456 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -12525,6 +12537,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a18c000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <12>;
+		mediatek,larbs = <&smi_larb13>;
 		mediatek,camsv-hwcap = <0x1>;
 		mediatek,cammux-id = <11>;
 		interrupts = <GIC_SPI 457 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -12560,6 +12573,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a18d000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <13>;
+		mediatek,larbs = <&smi_larb13>;
 		mediatek,camsv-hwcap = <0x1>;
 		mediatek,cammux-id = <12>;
 		interrupts = <GIC_SPI 458 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -12595,6 +12609,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a18e000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <14>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0x1>;
 		mediatek,cammux-id = <13>;
 		interrupts = <GIC_SPI 459 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -12630,6 +12645,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 			  <0 0x1a18f000 0 0x1000>;
 		reg-names = "base", "inner_base";
 		mediatek,camsv-id = <15>;
+		mediatek,larbs = <&smi_larb14>;
 		mediatek,camsv-hwcap = <0x1>;
 		mediatek,cammux-id = <14>;
 		interrupts = <GIC_SPI 460 IRQ_TYPE_LEVEL_HIGH 0>;
@@ -12665,6 +12681,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 				<0 0x1a138000 0 0x8000>;
 		reg-names = "base", "inner_base";
 		mediatek,mraw-id = <0>;
+		mediatek,larbs = <&smi_larb25>;
 		mediatek,cammux-id = <15>;
 		interrupts = <GIC_SPI 465 IRQ_TYPE_LEVEL_HIGH 0>;
 		power-domains = <&scpsys MT6895_POWER_DOMAIN_CAM_MRAW>;
@@ -12686,6 +12703,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 				<0 0x1a148000 0 0x8000>;
 		reg-names = "base", "inner_base";
 		mediatek,mraw-id = <1>;
+		mediatek,larbs = <&smi_larb26>;
 		mediatek,cammux-id = <16>;
 		interrupts = <GIC_SPI 466 IRQ_TYPE_LEVEL_HIGH 0>;
 		power-domains = <&scpsys MT6895_POWER_DOMAIN_CAM_MRAW>;
@@ -12707,6 +12725,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 				<0 0x1a158000 0 0x8000>;
 		reg-names = "base", "inner_base";
 		mediatek,mraw-id = <2>;
+		mediatek,larbs = <&smi_larb25>;
 		mediatek,cammux-id = <17>;
 		interrupts = <GIC_SPI 467 IRQ_TYPE_LEVEL_HIGH 0>;
 		power-domains = <&scpsys MT6895_POWER_DOMAIN_CAM_MRAW>;
@@ -12728,6 +12747,7 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 				<0 0x1a168000 0 0x8000>;
 		reg-names = "base", "inner_base";
 		mediatek,mraw-id = <3>;
+		mediatek,larbs = <&smi_larb26>;
 		mediatek,cammux-id = <18>;
 		interrupts = <GIC_SPI 468 IRQ_TYPE_LEVEL_HIGH 0>;
 		power-domains = <&scpsys MT6895_POWER_DOMAIN_CAM_MRAW>;
