[ALPS06239455] pda: fix 6895 build error
fix 6895 build error

MTK-Commit-Id: 89d92a2ef8156e3916f64999ed398b34b13fcb9b

Change-Id: I79cf689d4ad21a7a6fd7378b6305861b26b3933b
CR-Id: ALPS06239455
Feature: [Android Default] AF (contrast AF)
Signed-off-by: po-hao.huang <po-hao.huang@mediatek.com>

--- a/drivers/misc/mediatek/cameraisp/pda/Makefile
+++ b/drivers/misc/mediatek/cameraisp/pda/Makefile
@@ -18,6 +18,10 @@ ccflags-y += -I$(srctree)/drivers/iommu
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/iommu
 ccflags-$(CONFIG_MTK_IOMMU_V2) += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/$(MTK_PLATFORM)/include/
 
+ifneq ($(wildcard $(srctree)/include/dt-bindings/memory/mt6983-larb-port.h),)
+subdir-ccflags-y += -DPDA_TF_DUMP_71_1
+endif
+
 obj-y := camera_pda_dummy.o
 
 obj-$(CONFIG_MTK_CAMERA_ISP_PDA_SUPPORT) += isp_71/camera_pda.o
