[ALPS06261709] arm64: dts: mt6895: modify vibrator dts structure
Modify vibrator dts structure
for customer to modify in project dts

MTK-Commit-Id: 878b6480d8b2fe2295f67575e0ccb1c1e44157f8

Signed-off-by: Xing Zhang <xing.zhang@mediatek.com>
CR-Id: ALPS06261709
Feature: [Android Default] Backlight
Change-Id: I5a1ff7b565391d5a74d76e59baaa9f451b6414eb

--- a/arch/arm64/boot/dts/mediatek/mt6895.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6895.dts
@@ -2693,7 +2693,7 @@
 			clock-div = <1>;
 		};
 
-		regulator_vibrator {
+		regulator_vibrator: regulator_vibrator {
 			compatible = "regulator-vibrator";
 			label = "vibrator";
 			min-volt = <2800000>;
