--- a/arch/arm64/boot/dts/mediatek/mt6983.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6983.dts
@@ -7568,6 +7568,8 @@
 		reg = <0 0x14800000 0 0x800000>;
 		power-domains = <&scpsys MT6983_POWER_DOMAIN_DP_TX>;
 		interrupts = <GIC_SPI 761 IRQ_TYPE_LEVEL_HIGH 0>;
+		dptx,phy_params = <0x221c1814 0x24241e18 0x0000302a
+							0x0e080400 0x000c0600 0x00000006>;
 	};
 
 	hcp: hcp@0 {
