[ALPS06299903] arm64: dts: mediatek: Add tia debug info
arm64: dts: mediatek: Add tia debug info

MTK-Commit-Id: a6c79bb2e03e0b172d6d446b06ba7921370cb51e

Signed-off-by: Zhenyu Jing <zhenyu.jing@mediatek.com>
CR-Id: ALPS06299903
Feature: Location Chipset Capability
Change-Id: I3516efa0b81143afa9274007d9121c9c8332bab4

--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -3633,9 +3633,11 @@
 			      <0 0x18c00000 0 0x100000>,
 			      <0 0x1c000000 0 0x4>,
 			      <0 0x1c805028 0 0x4>,
-			      <0 0x1c805030 0 0x4>;
+			      <0 0x1c805030 0 0x4>,
+			      <0 0x1c8050cc 0 0x28>;
 			reg-names = "conn_infra_base", "conn_gps_base",
-				"status_dummy_cr", "tia2_gps_on", "tia2_gps_rc_sel";
+				"status_dummy_cr", "tia2_gps_on", "tia2_gps_rc_sel",
+				"tia2_gps_debug";
 			interrupts = <GIC_SPI 518 IRQ_TYPE_LEVEL_HIGH 0>,
 				<GIC_SPI 519 IRQ_TYPE_LEVEL_HIGH 0>,
 				<GIC_SPI 520 IRQ_TYPE_LEVEL_HIGH 0>,
