--- a/arch/arm64/boot/dts/mediatek/mt6983.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6983.dts
@@ -9596,9 +9596,11 @@
 				<0 0x18c00000 0 0x100000>,
 				<0 0x1c000000 0 0x4>,
 				<0 0x1c015e28 0 0x4>,
-				<0 0x1c015e30 0 0x4>;
+				<0 0x1c015e30 0 0x4>,
+				<0 0x1c015ecc 0 0x28>;
 		reg-names = "conn_infra_base", "conn_gps_base",
-				"status_dummy_cr", "tia2_gps_on", "tia2_gps_rc_sel";
+				"status_dummy_cr", "tia2_gps_on", "tia2_gps_rc_sel",
+				"tia2_gps_debug";
 		interrupts = <GIC_SPI 560 IRQ_TYPE_LEVEL_HIGH 0>,
 				<GIC_SPI 561 IRQ_TYPE_LEVEL_HIGH 0>,
 				<GIC_SPI 562 IRQ_TYPE_LEVEL_HIGH 0>,
