[ALPS06309939] ASoC: mt6895: enable DPTX dailink
Enable DPTX dailink for display audio output in mt6895

MTK-Commit-Id: e57f7d37e17d38263b787fb1cfb3674dbc040c63

CR-Id: ALPS06309939
Feature: [Module]Audio Kernel
Change-Id: I7933f260e686384e14333573a2d27143922ffd44
Signed-off-by: Qinzhong.Deng <qinzhong.deng@mediatek.com>

--- a/sound/soc/mediatek/mt6895/Makefile
+++ b/sound/soc/mediatek/mt6895/Makefile
@@ -26,9 +26,8 @@ snd-soc-mt6895-afe-objs += \
 	mt6895-dai-src.o \
 	mt6895-dai-pcm.o \
 	mt6895-dai-hostless.o \
-	mt6895-misc-control.o
-
-	#	mt6895-dai-tdm.o \
+	mt6895-misc-control.o \
+	mt6895-dai-tdm.o
 
 # machine driver
 obj-$(CONFIG_SND_SOC_MT6895_MT6368) += mt6895-mt6368.o
