[ALPS06316197] arm64: dts: mt6879: Support VMM buck suspend/resume
Buck and mtcmos controls are coupled control flow.
There are too many mtcmos within different subsystems.
Therefore it is much appropriate to enable/disable
buck control when mtcmos being turned on/off. Add related
buck into scpsys so that scpsys could control mtcmos before/after
buck control.

MTK-Commit-Id: 3f67e8a31327e15252281769a8e180a7ed0731dd

CR-Id: ALPS06316197
Feature: [Android Default] Camera Application Basic Functions
Signed-off-by: mtk13668 <yuan-jung.kuo@mediatek.com>
Change-Id: I2bae3b41ded8e95a4338db167dbc6f300d732cfc

--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -1357,6 +1357,14 @@
 		};
 	};
 
+	vmmspm: vmmspm {
+		compatible = "mediatek,vmm_spm";
+		reg = <0 0x1c001000 0 0x1000>;  // sys_spm
+		reg-names = "SPM_BASE";
+
+		vmm-pmic-supply = <&mt6319_6_vbuck3>;
+	};
+
 	ispdvfs: ispdvfs {
 		compatible = "mediatek,ispdvfs";
 		mediatek,ccu_rproc = <&ccu_rproc>;
@@ -4845,6 +4853,8 @@
 			infracfg = <&infracfg_ao_clk>;
 			vlpcfg = <&vlpcfg_bus_clk>;
 			hw-voter-regmap = <&hwv>;
+			isp_main-supply = <&mt6319_6_vbuck3>;
+			cam_main-supply = <&mt6319_6_vbuck3>;
 		};
 
 		vlpcfg_bus_clk: syscon@1C00C000 {
@@ -10378,7 +10388,6 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 				regulator-max-microvolt = <1193750>;
 				regulator-enable-ramp-delay = <256>;
 				regulator-allowed-modes = <0 1 2>;
-				regulator-always-on;
 			};
 			mt6319_6_vbuck4: 6_vbuck4 {
 				regulator-compatible = "vbuck4";
