--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -2887,7 +2887,7 @@
 			buf_length = <0x280000>;
 			buf_addr_align = <0x1000000>;
 			nr_max_core = <8>;
-			nr_big_core = <4>;
+			nr_big_core = <2>;
 			nr_rs_entry_little = <8>;
 			nr_rs_entry_big = <16>;
 			nr_header_row = <0>;
@@ -2898,7 +2898,7 @@
 			dfd_cache {
 				enabled = <0>;
 				dfd_timeout = <0x5dc0>;
-				buffer_length = <0x2000000>;
+				buf_length = <0x2000000>;
 			};
 		};
 
