--- a/drivers/media/platform/mtk-isp/camsys/isp7_1/cam/Kbuild
+++ b/drivers/media/platform/mtk-isp/camsys/isp7_1/cam/Kbuild
@@ -63,18 +63,24 @@ include $(src)/mtk_csi_phy_3_0/sub_drv.mk
 obj-$(CONFIG_VIDEO_MTK_ISP_CAMSYS) += mtk-cam-isp.o
 obj-$(CONFIG_VIDEO_MTK_ISP_CAMSYS) += mtk-cam-plat-util.o
 
+PLATFORM_PATH = $(srctree)/$(src)
+# workaround for external build
+ifneq ($(M),)
+PLATFORM_PATH = $(src)
+endif
+
 # camsys platform module
-ifneq ($(wildcard $(srctree)/$(src)/mtk_cam-plat-mt6983.c),)
+ifneq ($(wildcard $(PLATFORM_PATH)/mtk_cam-plat-mt6983.c),)
 subdir-ccflags-y += -DCAMSYS_MRAW_V1
 mtk-cam-plat-mt6983-objs :=  mtk_cam-plat-mt6983.o
 obj-$(CONFIG_VIDEO_MTK_ISP_CAMSYS) += mtk-cam-plat-mt6983.o
 endif
-ifneq ($(wildcard $(srctree)/$(src)/mtk_cam-plat-mt6879.c),)
+ifneq ($(wildcard $(PLATFORM_PATH)/mtk_cam-plat-mt6879.c),)
 subdir-ccflags-y += -DCAMSYS_MRAW_V2
 mtk-cam-plat-mt6879-objs :=  mtk_cam-plat-mt6879.o
 obj-$(CONFIG_VIDEO_MTK_ISP_CAMSYS) += mtk-cam-plat-mt6879.o
 endif
-ifneq ($(wildcard $(srctree)/$(src)/mtk_cam-plat-mt6895.c),)
+ifneq ($(wildcard $(PLATFORM_PATH)/mtk_cam-plat-mt6895.c),)
 subdir-ccflags-y += -DCAMSYS_MRAW_V3
 mtk-cam-plat-mt6895-objs :=  mtk_cam-plat-mt6895.o
 obj-$(CONFIG_VIDEO_MTK_ISP_CAMSYS) += mtk-cam-plat-mt6895.o
