[ALPS06305700] arm64: dts: mt6895: use two ccorr in mt6895
use two ccorr in mt6895

MTK-Commit-Id: b704312063ac703475470abd6d7b6b661b435b38

CR-Id: ALPS06305700
Feature: [Module]Display Driver
Change-Id: I6c2fdcfada082874b07887d5b89c809fbacad491
Signed-off-by: Faker Liu <faker.liu@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/mt6895.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6895.dts
@@ -5748,6 +5748,9 @@
 			reg = <0 0x1400a000 0 0x1000>;
 			interrupts = <GIC_SPI 310 IRQ_TYPE_LEVEL_HIGH 0>;
 			clocks = <&mmsys0_config_clk CLK_MM0_DISP_CCORR0>;
+			ccorr_bit = <13>;
+			ccorr_num_per_pipe = <2>;
+			ccorr_linear_per_pipe = <0x10>;
 		};
 
 		disp_ccorr0_1: disp_ccorr@1400b000 {
