--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -241,6 +241,18 @@ config DRM_PANEL_SAMSUNG_OP_CMD_MSYNC2
 	  resolution and uses 24-bits RGB per pixel. It provides a
 	  MIPI DSI interface to host.
 
+config DRM_PANEL_K6895V1_64_95T_ALPHA_CMD
+	tristate "K6895v1 ALPHA WQHD CMD  Mode panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for K6895V1 ALPHA DPHY
+          cmd mode WQHD panel. The panel has a 1440x3200
+          resolution and uses 24-bits RGB per pixel. It provides a
+          MIPI DSI interface to host.
+
+
 config DRM_PANEL_NOVATEK_NT36672A_VDO
 	tristate "Novatek NT36672A FHD+ video mode panel"
 	depends on OF
