--- a/arch/arm64/configs/mgk_64_k510_defconfig
+++ b/arch/arm64/configs/mgk_64_k510_defconfig
@@ -185,6 +185,7 @@ CONFIG_DRM_PANEL_TRULY_NT35595_CMD=m
 CONFIG_DRM_PANEL_SAMSUNG_ANA6705_CMD=m
 CONFIG_DRM_PANEL_SAMSUNG_OP_CMD=m
 CONFIG_DRM_PANEL_SAMSUNG_OP_CMD_MSYNC2=m
+CONFIG_DRM_PANEL_K6895V1_64_95T_ALPHA_CMD=m
 CONFIG_DRM_MEDIATEK_PANEL=m
 CONFIG_DRM_MEDIATEK=m
 CONFIG_DRM_MEDIATEK_V2=y
