[ALPS06254749] arm64: configs: add MT6369 regulator support
Add MT6369 regulator support.

MTK-Commit-Id: 6295e95b85c22f7ececbd123840d2fa5ea6f1161

Signed-off-by: Jeter Chen <jeter.chen@mediatek.com>
CR-Id: ALPS06254749
Feature: Regulator(regulator)
Change-Id: I326bf9465405b1609378f2e8e07ab27fec78ebc9

--- a/arch/arm64/configs/mgk_64_kasan_k510_defconfig
+++ b/arch/arm64/configs/mgk_64_kasan_k510_defconfig
@@ -158,6 +158,7 @@ CONFIG_REGULATOR_MT6359P=m
 CONFIG_REGULATOR_MT6360=m
 CONFIG_REGULATOR_MT6363=m
 CONFIG_REGULATOR_MT6368=m
+CONFIG_REGULATOR_MT6369=m
 CONFIG_REGULATOR_MT6373=m
 CONFIG_REGULATOR_MTK_DVFSRC=m
 CONFIG_REGULATOR_MTK_VMM=m
