--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -4587,6 +4587,7 @@
 			reg = <0 0x1e827000 0 0x80>;
 			power-domains = <&scpsys MT6879_POWER_DOMAIN_MM_INFRA>;
 			mminfra-bkrs = <1>;
+			init-clk-on;
 			clocks = <&mminfra_config_clk CLK_MMINFRA_GCE_D>,
 					<&mminfra_config_clk CLK_MMINFRA_GCE_M>,
 					<&mminfra_config_clk CLK_MMINFRA_SMI>,
